samples/python/tilengine.py


	def copy_tile(self, source, target):
		"""
		Copies tile graphic data inside a Tileset
		:param source: index of source tile
		:param target: index of target tile
		"""
		ok = _tln.TLN_CopyTile(self, source, target)
		_raise_exception(ok)

	def delete(self):
		"""
		Destroys the object and releases unmanaged resources
		"""
		ok = _tln.TLN_DeleteTileset(self)
		_raise_exception(ok)


# tilemaps management ---------------------------------------------------------
_tln.TLN_CreateTilemap.argtypes = [c_int, c_int, POINTER(Tile), c_int, c_void_p]
_tln.TLN_CreateTilemap.restype = c_void_p
_tln.TLN_LoadTilemap.argtypes = [c_char_p]
_tln.TLN_LoadTilemap.restype = c_void_p
_tln.TLN_CloneTilemap.argtypes = [c_void_p]
_tln.TLN_CloneTilemap.restype = c_void_p
_tln.TLN_GetTilemapRows.argtypes = [c_void_p]
_tln.TLN_GetTilemapRows.restype = c_int
_tln.TLN_GetTilemapRows.argtypes = [c_void_p]
_tln.TLN_GetTilemapRows.restype = c_int
_tln.TLN_GetTilemapTileset.argtypes = [c_void_p]
_tln.TLN_GetTilemapTileset.restype = c_void_p
_tln.TLN_GetTilemapTile.argtypes = [c_void_p, c_int, c_int, POINTER(Tile)]
_tln.TLN_GetTilemapTile.restype = c_bool
_tln.TLN_SetTilemapTile.argtypes = [c_void_p, c_int, c_int, POINTER(Tile)]
_tln.TLN_SetTilemapTile.restype = c_bool
_tln.TLN_CopyTiles.argtypes = [c_void_p, c_int, c_int, c_int, c_int, c_void_p, c_int, c_int]
_tln.TLN_CopyTiles.restype = c_bool
_tln.TLN_DeleteTilemap.argtypes = [c_void_p]
_tln.TLN_DeleteTilemap.restype = c_bool


class Tilemap(object):
	"""
	The Tilemap object holds the grid of tiles that define the background layout
	"""
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.rows = _tln.TLN_GetTilemapRows(handle)
		self.cols = _tln.TLN_GetTilemapCols(handle)
		tileset_handle = _tln.TLN_GetTilemapTileset(handle)
		if tileset_handle is not None:
			self.tileset = Tileset(tileset_handle)
		else:
			self.tileset = None

	@classmethod
	def create(cls, rows, cols, tiles, background_color=0, tileset=None):
		"""
		Static method that creates an empty tilemap
		:param rows: Number of rows (vertical dimension)
		:param cols: Number of cols (horizontal dimension)
		:param tiles: List of Tile objects with tile data
		:param background_color: optional Color object with default background color
		:param tileset: Optional reference to associated tileset
		:return: instance of the created object 
		"""
		handle = _tln.TLN_CreateTilemap(rows, cols, POINTER(tiles), background_color, tileset)
		if handle is not None:
			return Tilemap(handle)
		else:
			_raise_exception()

	@classmethod
	def fromfile(cls, filename, layer_name=None):
		"""
		Static method that loads a Tiled TMX tilemap from file
		:param filename: TMX file with the tilemap
		:param layer_name: Optional name of the layer to load when the TMX file has more than one layer. 
		By default it loads the first layer inside the TMX
		:return: instance of the created object
		"""
		handle = _tln.TLN_LoadTilemap(_encode_string(filename), _encode_string(layer_name))
		if handle is not None:
			return Tilemap(handle)
		else:
			_raise_exception()

	def clone(self):
		"""
		Creates a copy of the object
		:return: instance of the copy
		"""
		handle = _tln.TLN_CloneTilemap(self)
		if handle is not None:
			return Tilemap(handle)
		else:
			_raise_exception()

	def get_tile(self, row, col, tile_info):
		"""
		Gets data about a given tile
		:param row: Vertical position of the tile (0 <= row < rows)
		:param col: Horizontal position of the tile (0 <= col < cols)
		:param tile_info: pointer to user-provided `Tile` object where to get the data
		"""
		ok = _tln.TLN_GetTilemapTile(self, row, col, POINTER(tile_info))
		_raise_exception(ok)

	def set_tile(self, row, col, tile_info):
		"""
		
		:param row: Vertical position of the tile (0 <= row < rows)
		:param col: Horizontal position of the tile (0 <= col < cols)
		:param tile_info: pointer to user-provided `Tile` object 
		"""
		ok = _tln.TLN_SetTilemapTile(self, row, col, POINTER(tile_info))
		_raise_exception(ok)

	def copy_tiles(self, src_row, src_col, num_rows, num_cols, dst_tilemap, dst_row, dst_col):
		"""
		Copies blocks of tiles between two tilemaps
		:param src_row: Starting row (vertical position) inside the source tilemap
		:param src_col: Starting column (horizontal position) inside the source tilemap
		:param num_rows: Number of rows to copy
		:param num_cols: Number of columns to copy
		:param dst_tilemap: Target tilemap
		:param dst_row: Starting row (vertical position) inside the target tilemap
		:param dst_col: Starting column (horizontal position) inside the target tilemap
		"""
		ok = _tln.TLN_CopyTiles(self, src_row, src_col, num_rows, num_cols, dst_tilemap, dst_row, dst_col)
		_raise_exception(ok)

	def delete(self):
		"""
		Destroys the object and releases unmanaged resources
		"""
		ok = _tln.TLN_DeleteTilemap(self)
		_raise_exception(ok)


# color tables management -----------------------------------------------------
_tln.TLN_CreatePalette.argtypes = [c_int]
_tln.TLN_CreatePalette.restype = c_void_p
_tln.TLN_LoadPalette.argtypes = [c_char_p]
_tln.TLN_LoadPalette.restype = c_void_p
_tln.TLN_ClonePalette.argtypes = [c_void_p]
_tln.TLN_ClonePalette.restype = c_void_p
_tln.TLN_SetPaletteColor.argtypes = [c_void_p, c_int, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_SetPaletteColor.restype = c_bool
_tln.TLN_MixPalettes.argtypes = [c_void_p, c_void_p, c_void_p, c_ubyte]
_tln.TLN_MixPalettes.restype = c_bool
_tln.TLN_AddPaletteColor.argtypes = [c_void_p, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_AddPaletteColor.restype = c_bool
_tln.TLN_SubPaletteColor.argtypes = [c_void_p, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_SubPaletteColor.restype = c_bool
_tln.TLN_ModPaletteColor.argtypes = [c_void_p, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_ModPaletteColor.restype = c_bool
_tln.TLN_GetPaletteData.argtypes = [c_void_p, c_int]
_tln.TLN_GetPaletteData.restype = POINTER(c_ubyte)
_tln.TLN_DeletePalette.argtypes = [c_void_p]
_tln.TLN_DeletePalette.restype = c_bool


class Palette(object):
	"""
	The Palette object holds the color tables used by tileesets and spritesets to render sprites and backgrounds
	"""
	def __init__(self, handle):
		self._as_parameter_ = handle

	@classmethod
	def create(cls, num_entries=256):
		"""
		Static method that creates an empty palette
		:param num_entries: optional number of colors to hold (up to 256, default value)
		:return: instance of the created object
		"""
		handle = _tln.TLN_CreatePalette(num_entries)
		if handle is not None:
			return Palette(handle)
		else:
			_raise_exception()

	@classmethod
	def fromfile(cls, filename):
		"""
		Static method that loads a palette from an Adobe Color Table (.act) file
		:param filename: name of the .act file to load
		:return: instance of the created object 
		"""
		handle = _tln.TLN_LoadPalette(_encode_string(filename))
		if handle is not None:
			return Palette(handle)
		else:
			_raise_exception()

	def clone(self):
		"""
		Creates a copy of the object
		:return: instance of the copy
		"""
		handle = _tln.TLN_ClonePalette(self)
		if handle is not None:
			return Palette(handle)
		else:
			_raise_exception()

	def set_color(self, entry, color):
		"""
		Sets the RGB color value of a palette entry
		:param entry: Index of the palette entry to modify (0-255)
		:param color: Color object with the r,g,b components of the color
		"""
		ok = _tln.TLN_SetPaletteColor(self, entry, color.r, color.g, color.b)
		_raise_exception(ok)

	def mix(self, src_palette1, src_palette2, factor):
		"""
		Mixes two palettes
		:param src_palette1: First palette to mix
		:param src_palette2: Second palette to mix
		:param factor: Integer value with percentage of mix (0-100)
		"""
		ok = _tln.TLN_MixPalettes(src_palette1, src_palette2, self, factor)
		_raise_exception(ok)

	def add_color(self, first, count, color):
		"""
		Modifies a range of colors by adding the provided color value to the selected range. 
		The result is always a brighter color.
		:param first: index of the first color entry to modify
		:param count: number of colors from start to modify
		:param color: Color object to add
		"""
		ok = _tln.TLN_AddPaletteColor(self, first, count, color.r, color.g, color.b)
		_raise_exception(ok)

	def sub_color(self, first, count, color):
		"""
		Modifies a range of colors by subtracting the provided color value to the selected range. 
		The result is always a darker color.
		:param first: index of the first color entry to modify
		:param count: number of colors from start to modify
		:param color: Color object to subtract
		"""
		ok = _tln.TLN_SubPaletteColor(self, first, count, color.r, color.g, color.b)
		_raise_exception(ok)

	def mod_color(self, first, count, color):
		"""
		Modifies a range of colors by modulating (normalized product) the provided color value to the selected range. 
		The result is always a darker color.
		:param first: index of the first color entry to modify
		:param count: number of colors from start to modify
		:param color: Color object to modulate
		"""
		ok = _tln.TLN_ModPaletteColor(self, first, count, color.r, color.g, color.b)
		_raise_exception(ok)

	def delete(self):
		"""
		Destroys the object and releases unmanaged resources
		"""
		ok = _tln.TLN_DeletePalette(self)
		_raise_exception(ok)


# bitmaps ---------------------------------------------------------------------
_tln.TLN_CreateBitmap.argtypes = [c_int, c_int, c_int]
_tln.TLN_CreateBitmap.restype = c_void_p
_tln.TLN_LoadBitmap.argtypes = [c_char_p]
_tln.TLN_LoadBitmap.restype = c_void_p
_tln.TLN_CloneBitmap.argtypes = [c_void_p]
_tln.TLN_CloneBitmap.restype = c_void_p
_tln.TLN_GetBitmapPtr.argtypes = [c_void_p, c_int, c_int]
_tln.TLN_GetBitmapPtr.restype = POINTER(c_ubyte)
_tln.TLN_GetBitmapWidth.argtypes = [c_void_p]
_tln.TLN_GetBitmapWidth.restype = c_int
_tln.TLN_GetBitmapHeight.argtypes = [c_void_p]
_tln.TLN_GetBitmapHeight.restype = c_int
_tln.TLN_GetBitmapDepth.argtypes = [c_void_p]
_tln.TLN_GetBitmapDepth.restype = c_int
_tln.TLN_GetBitmapPitch.argtypes = [c_void_p]
_tln.TLN_GetBitmapPitch.restype = c_int
_tln.TLN_GetBitmapPalette.argtypes = [c_void_p]
_tln.TLN_GetBitmapPalette.restype = c_void_p
_tln.TLN_DeleteBitmap.argtypes = [c_void_p]
_tln.TLN_DeleteBitmap.restype = c_bool


class Bitmap(object):
	"""
	The Bitmap object holds graphic data used to build in backgrounds, Tileset and Spriteset objects
	"""
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.width = _tln.TLN_GetBitmapWidth(handle)
		self.height = _tln.TLN_GetBitmapHeight(handle)
		self.depth = _tln.TLN_GetBitmapDepth(handle)
		self.pitch = _tln.TLN_GetBitmapPitch(handle)
		self.palette = Palette(_tln.TLN_GetBitmapPalette(handle))

	@classmethod
	def create(cls, width, height, bpp=8):
		"""
		Static method that creates an empty bitmap
		:param width: Width in pixels
		:param height: Height in pixels
		:param bpp: Optional bits per pixel (8 by default)
		:return: instance of the created object 
		"""
		handle = _tln.TLN_CreateBitmap(width, height, bpp)
		if handle is not None:
			return Bitmap(handle)
		else:
			_raise_exception()

	@classmethod
	def fromfile(cls, filename):
		"""
		Static method that loads a BMP or PNG file
		:param filename: name of the file to load (.bmp or .png)
		:return: instance of the created object 
		"""
		handle = _tln.TLN_LoadBitmap(_encode_string(filename))
		if handle is not None:
			return Bitmap(handle)
		else:
			_raise_exception()

	def clone(self):
		"""
		Creates a copy of the object
		:return: instance of the copy
		"""
		handle = _tln.TLN_CloneBitmap(self)
		if handle is not None:
			return Bitmap(handle)
		else:
			_raise_exception()

	def get_data(self, x, y):
		"""
		Returns a pointer to the starting memory address
		:param x: Starting x position [0, width - 1]
		:param y: Starting y position [0, height - 1]
		:return: pointer
		"""
		return _tln.TLN_GetBitmapPtr(self, x, y)
